--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ ReachabilityAnalysis = "1e97bd63-91d1-579d-8e8d-501d2b57c93f"
 
 [compat]
 OffsetArrays = "1.14.1"
+Plots = "1.40.8"
 julia = "1.6.7"
 
 [extras]
