--- a/Project.toml
+++ b/Project.toml
@@ -9,12 +9,14 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PythonPlot = "274fc56d-3b97-40fa-a1cd-1b4a50311bf9"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 ReachabilityAnalysis = "1e97bd63-91d1-579d-8e8d-501d2b57c93f"
 
 [compat]
 OffsetArrays = "1.14.1"
 Plots = "1.40.8"
+PythonPlot = "1.0.6"
 julia = "1.6.7"
 
 [extras]
