--- a/Project.toml
+++ b/Project.toml
@@ -12,11 +12,13 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PythonPlot = "274fc56d-3b97-40fa-a1cd-1b4a50311bf9"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 ReachabilityAnalysis = "1e97bd63-91d1-579d-8e8d-501d2b57c93f"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
 OffsetArrays = "1.14.1"
 Plots = "1.40.8"
 PythonPlot = "1.0.6"
+Statistics = "1.11.1"
 julia = "1.6.7"
 
 [extras]
